# controller/movie_controller.go
@@ -13,6 +13,8 @@ import (
 // @Param title query string false "Movie title to search"
 // @Param genre query string false "Movie genre to search"
 // @Success 200 {object} models.MoviesResponse
+// @Failure 400 {object} models.ErrorResponse "Bad Request"
+// @Failure 500 {object} models.ErrorResponse "Internal Server Error"
 // @Router /movies/search [get]
 func SearchMovies(c *gin.Context) {
 }
@@ -26,6 +28,9 @@ func SearchMovies(c *gin.Context) {
 // @Param customerId path int true "Customer ID"
 // @Param body body models.MovieSchedule true "Whislist details"
 // @Success 200 {object} models.MovieSchedulesResponse
+// @Failure 400 {object} models.ErrorResponse "Bad Request"
+// @Failure 401 {object} models.ErrorResponse "Unauthorized"
+// @Failure 500 {object} models.ErrorResponse "Internal Server Error"
 // @Router /customer/{customerId}/wishlist [post]
 func AddWishlist(c *gin.Context) {
 }
@@ -38,6 +43,9 @@ func AddWishlist(c *gin.Context) {
 // @Produce json
 // @Param customerId path int true "Customer ID"
 // @Success 200 {object} models.MovieSchedulesResponse
+// @Failure 400 {object} models.ErrorResponse "Bad Request"
+// @Failure 401 {object} models.ErrorResponse "Unauthorized"
+// @Failure 500 {object} models.ErrorResponse "Internal Server Error"
 // @Router /customer/{customerId}/wishlist [get]
 func GetWishlist(c *gin.Context) {
 }
@@ -50,6 +58,9 @@ func GetWishlist(c *gin.Context) {
 // @Produce json
 // @Param WishlistId path int true "Wishlist ID"
 // @Success 200 {object} models.Response
+// @Failure 400 {object} models.ErrorResponse "Bad Request"
+// @Failure 401 {object} models.ErrorResponse "Unauthorized"
+// @Failure 500 {object} models.ErrorResponse "Internal Server Error"
 // @Router /customer/{customerId}/wishlist [delete]
 func DeleteWishlist(c *gin.Context) {
 }
